<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/background"
        android:scaleType="centerCrop"/>

    <ImageView
        android:id="@+id/iv_banner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/common_margin"
        android:layout_marginRight="@dimen/common_margin"
        android:layout_marginTop="@dimen/header_margin"
        android:contentDescription="@string/desc_ilmc_banner"
        android:src="@drawable/ilmc_logo" />

    <LinearLayout
        android:id="@+id/btn_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:id="@+id/sign_in"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/bg_dark_light"
            android:gravity="center"
            android:layout_weight="1">

            <TextView
                tools:ignore="MissingPrefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textAllCaps="true"
                android:textSize="18sp"
                android:textColor="@color/bg_white"
                fontPath="fonts/Roboto-Bold.ttf"
                android:padding="@dimen/common_margin"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/register_btn"
            android:gravity="center">

            <TextView
                tools:ignore="MissingPrefix"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textAllCaps="true"
                android:textSize="18sp"
                fontPath="fonts/Roboto-Bold.ttf"
                android:textColor="@color/text_light"
                android:padding="@dimen/common_margin"/>

        </LinearLayout>

    </LinearLayout>

    <android.support.v4.view.ViewPager
        android:id="@+id/view_pager"
        android:layout_above="@+id/circle_indicator"
        android:layout_width="wrap_content"
        android:layout_height="100dp" />

    <me.relex.circleindicator.CircleIndicator
        android:id="@+id/circle_indicator"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_above="@+id/btn_layout" />

</RelativeLayout>