<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_light"
    android:padding="@dimen/common_margin"
    android:gravity="center">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_pic"
        android:layout_width="76dp"
        android:layout_height="76dp"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_img_empty_avatar" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_email"
        android:layout_below="@+id/profile_pic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email"
            android:singleLine="true"
            android:inputType="textEmailAddress"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_firstname"
        android:layout_below="@+id/input_layout_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_firstname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_firstname"
            android:singleLine="true"
            android:inputType="textCapSentences"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary"/>

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_lastname"
        android:layout_below="@+id/input_layout_firstname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_lastname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_lastname"
            android:singleLine="true"
            android:inputType="textCapSentences"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_curpassword"
        android:layout_below="@+id/input_layout_lastname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_curpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Password actuel"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary" />

    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/input_layout_password"
        android:layout_below="@+id/input_layout_curpassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText
            android:id="@+id/input_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="Nouveau password"
            android:singleLine="true"
            android:inputType="textPassword"
            android:textColor="@color/colorPrimary"
            android:backgroundTint="@color/colorPrimary" />

    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:id="@+id/my_city"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/input_layout_password"
        android:orientation="horizontal"
        android:layout_marginTop="@dimen/common_margin"
        android:layout_marginBottom="@dimen/common_margin">

        <fr.ilovemycity.android.utils.components.CustomTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Votre ville"
            android:textColor="@color/text_black"
            android:textSize="16sp"/>

        <Spinner
            android:id="@+id/city_spinner"
            android:layout_marginLeft="@dimen/common_margin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        </Spinner>

    </LinearLayout>

    <Button
        android:id="@+id/btn_validate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/validate"
        android:textSize="16sp"
        android:background="@color/red"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/medium_margin"
        android:layout_below="@+id/my_city" />

</RelativeLayout>